--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,25 +6,100 @@
 	@apply underline decoration-remix-blue decoration-3 underline-offset-6;
 } */
 
-.resonsive-columns { column-width: 280px; column-gap: 2rem; } 
-
-
-.placeHoldergradient {
-    animation-duration: 1.2s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-name: placeHolderShimmer;
-    animation-timing-function: linear;
-    background: #f6f7f8;
-    background: linear-gradient(to right, #fafafa 8%, #f4f4f4 38%, #fafafa 54%);
-    background-size: 1000px 640px;
+.resonsive-columns {
+	column-width: 280px;
+	column-gap: 2rem;
 }
 
-@keyframes placeHolderShimmer{
-    0%{
-        background-position: -468px 0
-    }
-    100%{
-        background-position: 468px 0
-    }
+.placeHoldergradient {
+	animation-duration: 1.2s;
+	animation-fill-mode: forwards;
+	animation-iteration-count: infinite;
+	animation-name: placeHolderShimmer;
+	animation-timing-function: linear;
+	background: #f6f7f8;
+	background: linear-gradient(to right, #fafafa 8%, #f4f4f4 38%, #fafafa 54%);
+	background-size: 1000px 640px;
+}
+
+@keyframes placeHolderShimmer {
+	0% {
+		background-position: -468px 0;
+	}
+	100% {
+		background-position: 468px 0;
+	}
+}
+
+.layout-start-top {
+	grid-column-start: 1;
+	grid-column-end: span 2;
+	grid-row-start: 1;
+	grid-row-end: span 1;
+}
+
+.layout-container {
+	grid-template-columns: min(340px, 20vw) 1fr;
+	grid-auto-rows: min-content;
+	align-content: start;
+}
+
+.layout-profileImage {
+	grid-column-start: 1;
+	grid-column-end: span 1;
+	grid-row-start: 1;
+	grid-row-end: span 2;
+}
+
+.layout-header {
+	grid-column-start: 2;
+	grid-column-end: span 1;
+	grid-row-start: 1;
+	grid-row-end: 1;
+}
+
+.layout-sidebar {
+	grid-column-start: 1;
+	grid-column-end: span 1;
+	grid-row-start: 3;
+	grid-row-end: [end];
+}
+
+.layout-content {
+	grid-column-start: 2;
+	grid-column-end: span 1;
+	grid-row-start: 2;
+	grid-row-end: span 3;
+}
+
+@media screen and (max-width: 768px) {
+	.layout-container {
+		grid-template-columns: 1fr;
+		grid-auto-rows: min-content;
+		align-content: start;
+	}
+	.layout-profileImage {
+		grid-column-start: 1;
+		grid-column-end: span 1;
+		grid-row-start: 1;
+		grid-row-end: span 1;
+	}
+	.layout-header {
+		grid-column-start: 1;
+		grid-column-end: span 1;
+		grid-row-start: 2;
+		grid-row-end: 2;
+	}
+	.layout-sidebar {
+		grid-column-start: 1;
+		grid-column-end: span 1;
+		grid-row-start: 3;
+		grid-row-end: [end];
+	}
+	.layout-content {
+		grid-column-start: 1;
+		grid-column-end: span 1;
+		grid-row-start: 4;
+		grid-row-end: span 3;
+	}
 }
