--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* nav > a.active {
-	@apply underline decoration-remix-blue decoration-3 underline-offset-6;
-} */
+html {
+	overflow-y: scroll;
+}
 
 .resonsive-columns {
 	column-width: 280px;
@@ -39,67 +39,75 @@
 }
 
 .layout-container {
-	grid-template-columns: min(340px, 20vw) 1fr;
+	grid-template-columns: 1fr;
 	grid-auto-rows: min-content;
 	align-content: start;
 }
-
 .layout-profileImage {
 	grid-column-start: 1;
 	grid-column-end: span 1;
 	grid-row-start: 1;
-	grid-row-end: span 2;
+	grid-row-end: span 1;
 }
-
 .layout-header {
-	grid-column-start: 2;
+	grid-column-start: 1;
 	grid-column-end: span 1;
-	grid-row-start: 1;
-	grid-row-end: 1;
+	grid-row-start: 2;
+	grid-row-end: 2;
 }
-
 .layout-sidebar {
 	grid-column-start: 1;
 	grid-column-end: span 1;
 	grid-row-start: 3;
 	grid-row-end: [end];
 }
-
 .layout-content {
-	grid-column-start: 2;
+	grid-column-start: 1;
 	grid-column-end: span 1;
-	grid-row-start: 2;
+	grid-row-start: 4;
 	grid-row-end: span 3;
 }
 
-@media screen and (max-width: 768px) {
+/* @media only screen and (min-device-width: 768px) { */
+@media (min-width: 768px) {
+	.layout-start-top {
+		grid-column-start: 1;
+		grid-column-end: span 2;
+		grid-row-start: 1;
+		grid-row-end: span 1;
+	}
+
 	.layout-container {
-		grid-template-columns: 1fr;
+		grid-template-columns: min(340px, 20vw) 1fr;
 		grid-auto-rows: min-content;
 		align-content: start;
 	}
+
 	.layout-profileImage {
 		grid-column-start: 1;
 		grid-column-end: span 1;
 		grid-row-start: 1;
-		grid-row-end: span 1;
+		grid-row-end: span 2;
 	}
+
 	.layout-header {
-		grid-column-start: 1;
+		grid-column-start: 2;
 		grid-column-end: span 1;
-		grid-row-start: 2;
-		grid-row-end: 2;
+		grid-row-start: 1;
+		grid-row-end: 1;
 	}
+
 	.layout-sidebar {
 		grid-column-start: 1;
 		grid-column-end: span 1;
 		grid-row-start: 3;
 		grid-row-end: [end];
 	}
+
 	.layout-content {
-		grid-column-start: 1;
+		grid-column-start: 2;
 		grid-column-end: span 1;
-		grid-row-start: 4;
+		grid-row-start: 2;
 		grid-row-end: span 3;
 	}
 }
